fix help-block hard to see

--- a/src/client/styles/agile-admin/inverse/colors/antarctic.scss
+++ b/src/client/styles/agile-admin/inverse/colors/antarctic.scss
@@ -62,7 +62,8 @@ $info:$subthemecolor;
 }
 
 table,
-.hljs {
+.hljs,
+.help-block {
   background-color: $background-color;
 }
 
@@ -78,6 +79,14 @@ table,
 .editor-container .btn-open-dropzone {
   border-top: none;
 }
+
+.help-block {
+  padding: 5px;
+}
+
+// .help-block {
+//   color: $subthemecolor;
+// }
 
 /*
  * Accentcolor (yellow)
